# json-tracer

./: CHANGELOG.md  README.md  json-tracer.cabal  logger.cabal
app/: Main.hs  Sub.hs
example/: Fib.hs  Fib2.hs  Main.hs
src/: Logger.hs  PolyDict.hs
src/Control/Monad/: CTrace.hs
src/Control/Monad/Trans/: CTrace.hs
src/Data/: PolyDict.hs
src/JSON/: Trace.hs
test/: PolyDictSpec.hs
