name:                logger
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/logger#readme
license:             BSD3
license-file:        LICENSE
author:              Taku Terao
maintainer:          autotaker@gmail.com
copyright:           2017 Taku Terao
category:            Control
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -O2 -W
  exposed-modules:     Lib, PolyDict, Logger
  build-depends:       base >= 4.7 && <5,
                       mtl >=2.2 && <2.3, 
                       unordered-containers >= 0.2.8,
                       hashable >= 1.2.6 &&  < 1.2.7,
                       ghc-prim >= 0.5 && < 0.6,
                       microlens > 0.4.0,
                       microlens-ghc > 0.4.0,
                       transformers >= 0.5 && < 0.6,
                       containers >= 0.5 && < 0.6,
                       text >= 1.2.2,
                       aeson >= 0.11,
                       template-haskell >= 2.11
  default-extensions:  FlexibleInstances
                     , FlexibleContexts
                     , BangPatterns
                     , MultiParamTypeClasses
                     , ScopedTypeVariables
                     , GADTs
                     , OverloadedLabels
                     , DataKinds
                     , TypeFamilies
                     , RankNTypes
                     , TemplateHaskell
  default-language:    Haskell2010

executable logger-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , logger
                     , microlens
                     , microlens-ghc
                     , containers
  default-language:    Haskell2010

test-suite unit-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , logger
                     , hspec >= 2.2
                     , hspec-core >= 2.2
                     , hspec-expectations >= 0.7
                     , hspec-discover
                     , microlens
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/logger
